--- a/JCompWeb/src/main/webapp/WEB-INF/web.xml
+++ b/JCompWeb/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>JCompileWeb</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring/application-config.xml</param-value>
+    <param-value>classpath:web-config.xml</param-value>
   </context-param>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
